--- a/rootdir/ueventd.qcom.rc
+++ b/rootdir/ueventd.qcom.rc
@@ -42,7 +42,7 @@
 /dev/smd6                 0660   system     system
 /dev/smd7                 0660   bluetooth  bluetooth
 
-# Permissions for CSVT
+#permissions for CSVT
 /dev/smd11                0660   radio      radio
 
 /dev/radio0               0640   system     system
@@ -100,6 +100,7 @@
 /dev/jpeg0                0660   system     camera
 /dev/jpeg1                0660   system     camera
 /dev/jpeg2                0660   system     camera
+/dev/adsprpc-smd          0664   media		camera
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini/              0660   system     camera
 /dev/mercury0             0660   system     camera
@@ -107,14 +108,13 @@
 /dev/msm_vidc_dec         0660   system     audio
 /dev/msm_vidc_dec_sec     0660   system     audio
 /dev/msm_vidc_enc         0660   system     audio
-/dev/msm_vidc_enc_sec     0660   system     audio
 /dev/msm_rotator          0660   system     system
 /dev/hw_random            0660   system     system
-/dev/adsprpc-smd          0660   media      camera
+/dev/adsprpc-smd          0664   media      camera
 /dev/graphics/*           0660   system     graphics
 /dev/tun                  0660   system     vpn
 
-# Permissions for audio
+#permissions for audio
 /dev/msm_qcelp            0660   system     audio
 /dev/msm_evrc             0660   system     audio
 /dev/msm_wma              0660   system     audio
@@ -146,11 +146,11 @@
 /dev/ttyHSL0              0660   radio      system
 /dev/ttyHSL1              0660   system     system
 /dev/mdm                  0660   system     radio
+/sys/devices/virtual/smdpkt/smdcntl*        open_timeout   0664 radio radio
 /dev/sdio_tty_ciq_00      0660   system     system
 /dev/tty_sdio_00          0660   system     system
 /dev/ttyGS0               0660   system     system
 /dev/i2c-5                0660   media      media
-/sys/devices/virtual/smdpkt/smdcntl*        open_timeout   0664 radio radio
 
 # DVB devices
 /dev/dvb/adapter0/demux*  0440   media       media
@@ -161,10 +161,10 @@
 /dev/tsc_mux0             0660   media       media
 /dev/tsc_ci0              0660   media       media
 
-# Sensors
-/sys/devices/i2c-12/12-*                            pollrate_ms    0664    system   system
-/sys/devices/f9925000.i2c/i2c-0/0-*                 enable         0660    input    system
-/sys/devices/f9925000.i2c/i2c-0/0-*                 poll_delay     0660    input    system
+# sensors
+/sys/devices/i2c-12/12-*            pollrate_ms     0664     system    system
+/sys/devices/f9925000.i2c/i2c-0/0-* enable          0660     input     system
+/sys/devices/f9925000.i2c/i2c-0/0-* poll_delay      0660     input     system
 /sys/devices/virtual/optical_sensors/proximity      ps_adc         0660    input    system
 /sys/devices/virtual/optical_sensors/proximity      ps_poll_delay  0660    input    system
 /sys/devices/virtual/optical_sensors/lightsensor    ls_auto        0660    input    system
@@ -172,22 +172,17 @@
 /sys/devices/virtual/input/input*                   poll           0660    input    system
 /sys/devices/virtual/input/input*                   pollrate_ms    0660    input    system
 
-# Wlan
+# wlan
 /dev/wcnss_wlan           0660   system     system
 /dev/wcnss_ctrl           0660   system     system
 
-# Nfc permissions
-/dev/pn547                                          0660    nfc     nfc
-/sys/devices/f9925000.i2c/i2c-2/2-0028  init_deinit 0200    nfc     nfc
-/sys/devices/f9925000.i2c/i2c-2/2-0028  set_pwr     0200    nfc     nfc
-/sys/devices/f9925000.i2c/i2c-2/2-0028  res_ready   0400    nfc     nfc
-/sys/devices/f9925000.i2c/i2c-2/2-0028  recv_rsp    0600    nfc     nfc
-/sys/devices/f9925000.i2c/i2c-2/2-0028  send_cmd    0200    nfc     nfc
+#nfc permissions
+/dev/nfc-nci              0660    nfc         nfc
 
 # UIO devices
 /dev/uio0                 0660   system     system
 /dev/uio1                 0660   system     system
 /dev/uio2                 0660   system     system
 
-# Permission for dun
+# permission for dun
 /dev/dun                  0660   system     system
