--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -190,13 +190,14 @@ service wcnss-service /system/bin/wcnss_service
    oneshot
 
 # service ppd /system/bin/mm-pp-daemon
-#     class late_start
-#     user system
-#     socket pps stream 0660 system system
-#     group system graphics
-# 
-# on property:init.svc.surfaceflinger=stopped
-#     stop ppd
+     class late_start
+     user system
+     socket pps stream 0660 system system
+     group system graphics
+ 
+ on property:init.svc.surfaceflinger=stopped
+     stop ppd
+
 # SecEDS
 service TvoutService_C /system/bin/bintvoutservice
      class main
@@ -204,24 +205,3 @@ service TvoutService_C /system/bin/bintvoutservice
      group graphics
 on property:ro.SecEDS.enable=false
     stop TvoutService_C
-
-# Secure Storage startup
-service secure_storage /system/bin/secure_storage_daemon
-    class core
-    user system
-    group system
-    disabled
-
-on property:ro.securestorage.support=true
-    mkdir /dev/.secure_storage
-    chmod 0711 /dev/.secure_storage
-    chown system system /dev/.secure_storage
-    restorecon -R /dev/.secure_storage
-    start secure_storage
-
-on property:ro.securestorage.knox=true
-    mkdir /dev/.secure_storage
-    chmod 0711 /dev/.secure_storage
-    chown system system /dev/.secure_storage
-    restorecon -R /dev/.secure_storage
-    start secure_storage
