--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -413,8 +413,6 @@ on boot
     chown system system /sys/class/mdnie/mdnie/negative
     chown system media_rw /sys/class/mdnie/mdnie/accessibility
 
-    chown radio system /sys/class/lcd/panel/lcd_power
-    chown radio system /sys/class/lcd/panel/lcd_type
     chown radio system /sys/class/lcd/panel/power_reduce
     chown radio system /sys/class/lcd/panel/siop_enable
 
@@ -436,8 +434,8 @@ on boot
     chmod 0660 /sys/class/graphics/fb0/csc_cfg
 
     # Display color calibration
-    chown system system /sys/devices/virtual/graphics/fb0/rgb
-    chmod 0660 /sys/devices/virtual/graphics/fb0/rgb
+    #chown system system /sys/devices/virtual/graphics/fb0/rgb
+    #chmod 0660 /sys/devices/virtual/graphics/fb0/rgb
 
     # OTG Test
     chown system radio /sys/class/host_notify/usb_otg/booster
@@ -587,12 +585,13 @@ on boot
     chmod 0664 /sys/devices/virtual/sec/sec_touchkey/brightness
 
     # Permissions for bluetooth.
-    mkdir /efs/bluetooth 0775 radio system
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
-    chown radio net_bt_stack /efs/bluetooth/bt_addr
-    chmod 0755 /efs/bluetooth/bt_addr
-    restorecon_recursive /efs/bluetooth
+    chown bluetooth net_bt_stack /dev/ttyHS0
+    chmod 0660 /dev/ttyHS0
+    chmod 0660 /sys/class/rfkill/rfkill0/state
+    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
+    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
 
     # Assign TCP buffer thresholds to be ceiling value of technology maximums
     # Increased technology maximums should be reflected here.
@@ -600,6 +599,19 @@ on boot
     write /proc/sys/net/core/wmem_max  2097152
 
 # Services begin here
+# RIL
+service at_distributor /system/bin/at_distributor
+    class late_start
+    user root
+    group radio log
+	
+# for multi rild
+service ril-daemon2 /system/bin/rild -s rild2 -ds rild-debug1 -l /system/lib/libsec-ril-dsds.so
+    class main
+    socket rild2 stream 660 root radio
+    socket rild-debug1 stream 660 radio system
+    user root
+    group radio cache inet misc audio log qcom_diag sdcard_r shell sdcard_rw system drmrpc
 
 service adsprpcd /system/bin/adsprpcd
     class main
@@ -858,20 +870,6 @@ on property:crypto.driver.load=1
 on property:crypto.driver.load=0
     exec /system/bin/rmmod qcedev.ko
     exec /system/bin/rmmod qce.ko
-
-# Dual-sim support
-on property:persist.radio.multisim.config=dsds
-    stop ril-daemon
-    start ril-daemon
-    start ril-daemon2
-
-service ril-daemon2 /system/bin/rild -s rild2 -ds rild-debug1 -l /system/lib/libsec-ril-dsds.so
-    class main
-    socket rild2 stream 660 root radio
-    socket rild-debug1 stream 660 radio system
-    user root
-    disabled
-    group radio cache inet misc audio sdcard_r sdcard_rw diag qcom_diag log
 
 on charger
     mount_all fstab.qcom
