ms013g: update Rild service cmd line
Change-Id: I3ac51ca4d73389814741801908958417c0c55547

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -691,12 +691,13 @@ service at_distributor /system/bin/at_distributor
     group radio log
 	
 # for multi rild
-service ril-daemon1 /system/bin/rild -c 2
+service ril-daemon1 /system/bin/rild -l /system/lib/libsec-ril-dsds.so -c 2
     class main
     socket rild2 stream 660 root radio
     socket rild-debug2 stream 660 radio system
     user root
     group radio cache inet misc audio log qcom_diag system drmrpc sdcard_r sdcard_rw shell
+    disabled
 
 service adsprpcd /system/bin/adsprpcd
     class main
