--- a/wifi/hostapd_default.conf
+++ b/wifi/hostapd_default.conf
@@ -169,8 +169,8 @@ macaddr_acl=0
 # Accept/deny lists are read from separate files (containing list of
 # MAC addresses, one per line). Use absolute path name to make sure that the
 # files can be read on SIGHUP configuration reloads.
-accept_mac_file=/data/misc/wifi/hostapd.accept
-deny_mac_file=/data/misc/wifi/hostapd.deny
+accept_mac_file=/data/hostapd/hostapd.accept
+deny_mac_file=/data/hostapd/hostapd.deny
 
 # IEEE 802.11 specifies two authentication algorithms. hostapd can be
 # configured to allow both of these or only one. Open system authentication
@@ -879,7 +879,7 @@ wpa_group_rekey=86400
 # 0 = WPS disabled (default)
 # 1 = WPS enabled, not configured
 # 2 = WPS enabled, configured
-wps_state=0
+#wps_state=2
 
 # AP can be configured into a locked state where new WPS Registrar are not
 # accepted, but previously authorized Registrars (including the internal one)
