--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -638,6 +638,18 @@ on property:sys.boot_from_charger_mode=1
     trigger late-init
 
 # Services
+service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
+    class core
+	priority -20
+    socket zygote stream 660 root system
+    onrestart write /sys/android_power/request_state wake
+    onrestart write /sys/power/state on
+    onrestart restart audioserver
+    onrestart restart cameraserver
+    onrestart restart media
+    onrestart restart netd
+    writepid /dev/cpuset/foreground/tasks
+
 service adsprpcd /system/bin/adsprpcd
     class main
     user media
@@ -714,7 +726,7 @@ service rmt_storage /system/bin/rmt_storage
 
 on property:ro.boot.emmc=true
     start rmt_storage
-
+	
 # Limit to SoC reset (1) and independent SSR (3)
 on property:persist.sys.ssr.restart_level=1
     write /sys/module/subsystem_restart/parameters/restart_level 1
